# radar-models

./: CHANGELOG.md  README.md  pyproject.toml  tox.ini
.github/: pull_request_template.md
.github/workflows/: pull_request.yml  python-tox-ci.yml  python_file_check.yml  python_publish.yml  python_test.yml  release-please.yml
radar_models/: radar2.py  radar3.py
tests/: radar3_test.py  radar_models_test.py  table_extractor.py  test_lists.py
