[tool.poetry]
name = "radar-models"
version = "0.1.0"
description = "DB models for Radar"
authors = ["Andrew Atterton"]
license = "MIT"
readme = "README.md"
packages = [{include = "radar_models"}]

[tool.poetry.dependencies]
python = "^3.11"
sqlmodel = "^0.0.8"

[tool.poetry.group.test.dependencies]
faker = "^16.6.1"
psycopg2 = "^2.9.5"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
